--- a/ADIN.WPF/View/OperationView.xaml
+++ b/ADIN.WPF/View/OperationView.xaml
@@ -122,7 +122,7 @@
                                 <ColumnDefinition Width="3"/>
                                 <ColumnDefinition Width="2*"/>
                             </Grid.ColumnDefinitions>
-                            <local:CableDiagnosticsView Grid.Column="0" DataContext="{Binding TestModeVM}" Margin="0 0 10 0"/>
+                            <local:TimeDomainReflectometry Grid.Column="0" DataContext="{Binding TestModeVM}" Margin="0 0 10 0"/>
                             <GridSplitter Grid.Column="1" Style="{DynamicResource VerticalGridSplitterStyle}" />
                             <Grid Grid.Column="2">
                                 <components:DeviceStatusView DataContext="{Binding DeviceStatusVM}" Margin="10 0 0 0"/>
