--- a/ADIN.WPF/Themes/TextBlockStyle.xaml
+++ b/ADIN.WPF/Themes/TextBlockStyle.xaml
@@ -99,6 +99,7 @@
     </Style>
 
     <Style x:Key="TDRGroupStyle" TargetType="{x:Type GroupBox}" BasedOn="{StaticResource GroupBoxStyle}">
+        <Setter Property="Width" Value="250"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="GroupBox">
