--- a/ADIN.WPF/View/TimeDomainReflectometry.xaml
+++ b/ADIN.WPF/View/TimeDomainReflectometry.xaml
@@ -194,8 +194,8 @@
                                 </Line.RenderTransform>
                             </Line>
                             <Grid Margin="-32">
-                                <Border Height="100" Width="30" Background="BlueViolet" CornerRadius="5"/>
-                                <TextBlock Text="{Binding FaultState}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#FFD8D8D8" FontSize="15" RenderTransformOrigin="0.5,0.5">
+                                <Border Height="100" Width="30" Background="{Binding FaultBackgroundBrush}" CornerRadius="4"/>
+                                <TextBlock Text="{Binding FaultState}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{StaticResource hmc.color.content.inverse}" FontSize="14" RenderTransformOrigin="0.5,0.5">
                                     <TextBlock.RenderTransform>
                                         <TransformGroup>
                                             <ScaleTransform/>
