ADIN1200_Implementation: - changed frame length slider to affect the actual value to be exponential/logarithmically - added ticks and tick labels for the frame length and burst sliders

--- a/ADIN.WPF/Themes/SliderStyle.xaml
+++ b/ADIN.WPF/Themes/SliderStyle.xaml
@@ -49,9 +49,10 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <TickBar Name="TopTick" SnapsToDevicePixels="True" Placement="Top"
-                    Fill="{StaticResource UI.boderBrush}"
-                    Height="4"
-                    Visibility="Collapsed" />
+                    TickFrequency="32"
+                    Fill="Black"
+                    Height="8"
+                    Visibility="Visible" />
             <Border Name="TrackBackground"
                     Margin="0"
                     CornerRadius="2" 
