--- a/ADIN.WPF/View/LinkPropertiesView.xaml
+++ b/ADIN.WPF/View/LinkPropertiesView.xaml
@@ -195,7 +195,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Master or Slave Preference: " Style="{StaticResource TextBlockstyle}"/>
-                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaveAdvertises}" SelectedItem="{Binding SelectedMasterSlaveAdvertise}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding MasterSlaveAdvertises}" SelectedItem="{Binding SelectedMasterSlaveAdvertise, Mode=OneWay}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
@@ -208,7 +208,7 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" Text="Tx Level: " Style="{StaticResource TextBlockstyle}"/>
-                            <ComboBox Grid.Column="1" ItemsSource="{Binding TxLevels}" SelectedItem="{Binding SelectedTxLevel}" Style="{StaticResource ComboBoxFlatStyle}"/>
+                            <ComboBox Grid.Column="1" ItemsSource="{Binding TxLevels}" SelectedItem="{Binding SelectedTxLevel, Mode=OneWay}" Style="{StaticResource ComboBoxFlatStyle}"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
