--- a/ADIN.WPF/Components/OffsetManualDialog.xaml
+++ b/ADIN.WPF/Components/OffsetManualDialog.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ADIN.WPF.Components"
+        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
         mc:Ignorable="d"
         SizeToContent="WidthAndHeight"
         WindowStyle="None"
@@ -23,8 +24,8 @@
         <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Vertical">
             <TextBlock x:Name="TxtContentMessage" Text="Content Message" Margin="0 0 0 10"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="OK" Width="80" Margin="0 0 10 0" Click="OkButton_Click"/>
-                <Button Content="Cancel" Width="80" Click="CancelButton_Click"/>
+                <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="OK" Width="80" Margin="0 0 10 0" Click="OkButton_Click"/>
+                <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Cancel" Width="80" Click="CancelButton_Click"/>
             </StackPanel>
         </StackPanel>
     </Grid>
