--- a/ADIN.WPF/View/ExtraCommandsView.xaml
+++ b/ADIN.WPF/View/ExtraCommandsView.xaml
@@ -15,15 +15,15 @@
     </UserControl.Resources>
     <Grid>
         <StackPanel Orientation="Vertical">
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding PowerDownStatus}" Command="{Binding SoftwarePowerDownCommand}" IsEnabled="{Binding IsPoweredUp}"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding PowerDownStatus}" Command="{Binding SoftwarePowerDownCommand}" />
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="{Binding LinkStatus}" Command="{Binding DisableLinkCommand}" IsEnabled="{Binding IsPoweredUp}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}"/>
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Restart Linking" Command="{Binding AutoNegCommand}" IsEnabled="{Binding IsPoweredUp}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}"/>
             <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Auto-Neg Restart" Command="{Binding AutoNegCommand}" IsEnabled="{Binding IsPoweredUp}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource booleanVisibilityConverter}}"/>
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Save Registers" Command="{Binding RegisterActionCommand}" IsEnabled="{Binding IsPoweredUp}" CommandParameter="{x:Static enum:RegisterActionType.Save}"/>
-            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Load Registers" Command="{Binding RegisterActionCommand}" IsEnabled="{Binding IsPoweredUp}" CommandParameter="{x:Static enum:RegisterActionType.Load}"/>
-            <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys (Pin)" Command="{Binding SubSysResetCommand}" IsEnabled="{Binding IsPoweredUp}" CommandParameter="{x:Static enum:ResetType.SubSysPin}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}"/>
-            <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys" Command="{Binding SubSysResetCommand}" IsEnabled="{Binding IsPoweredUp}" CommandParameter="{x:Static enum:ResetType.SubSys}"/>
-            <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: PHY" Command="{Binding PhyResetCommand}" IsEnabled="{Binding IsPoweredUp}" CommandParameter="{x:Static enum:ResetType.Phy}"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Save Registers" Command="{Binding RegisterActionCommand}" CommandParameter="{x:Static enum:RegisterActionType.Save}"/>
+            <telerik:RadButton Style="{StaticResource TelerikButtonStyle}" Content="Load Registers" Command="{Binding RegisterActionCommand}" CommandParameter="{x:Static enum:RegisterActionType.Load}"/>
+            <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys (Pin)" Command="{Binding SubSysResetCommand}" CommandParameter="{x:Static enum:ResetType.SubSysPin}" Visibility="{Binding IsADIN1100Board, Converter={StaticResource invertedBooleanVisibilityConverter}}"/>
+            <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: SubSys" Command="{Binding SubSysResetCommand}" CommandParameter="{x:Static enum:ResetType.SubSys}"/>
+            <telerik:RadButton Style="{StaticResource ResetPhyButtonStyle}" Content="Reset: PHY" Command="{Binding PhyResetCommand}" CommandParameter="{x:Static enum:ResetType.Phy}"/>
         </StackPanel>
     </Grid>
 </UserControl>
