--- a/ADIN.WPF/View/DeviceStatusView.xaml
+++ b/ADIN.WPF/View/DeviceStatusView.xaml
@@ -36,7 +36,8 @@
                 <Border Style="{StaticResource BorderSyle}" Grid.Column="2">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock Text="Phy Address: " Style="{StaticResource DeviceStatusTextBlockstyle}"/>
-                        <TextBlock Text="{Binding PhyAddress}" Style="{StaticResource DeviceStatusValueStyle}"/>
+                        <!--<TextBlock Text="{Binding PhyAddress}" Style="{StaticResource DeviceStatusValueStyle}"/>-->
+                        <telerik:RadNumericUpDown Grid.Row="2" Grid.Column="1" Value="{Binding PhyAddress}" Minimum="0" Maximum="7" SmallChange="1"  NumberDecimalDigits="0" IsEditable="False" AutoReverse="True" Style="{StaticResource RadNumericUpDownStyle}"/>
                     </StackPanel>
                 </Border>
             </Grid>
